testsuites/LLT/compiler/Diagnose/lex_test/lex_illegal_symbol_in_string_interpolation/case3.expect.out
error: unterminated string interpolation
  ==> case3.cj:14:11:
   | 
14 |     "cangjie ${'c'
   |     ~        ^^^^^^ unterminated string interpolation
   |     |
   |     because it is in single-line string
   | 

1 error generated, 1 error printed.
